ai/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rec-ai
  name: rec-ai-svc
  namespace: prod
spec:
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8000
    - protocol: TCP
      name: https
      port: 443
      targetPort: 8000
  selector:
    app: rec-ai
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gen-ai
  name: gen-ai-svc
  namespace: prod
spec:
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8000
    - protocol: TCP
      name: https
      port: 443
      targetPort: 8000
  selector:
    app: gen-ai
  type: NodePort
