ai/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-ingress
  namespace: prod
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/healthcheck-path: "/ready"
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "60"
spec:
  ingressClassName: alb
  rules:
    - host: joing-ai.o-r.kr
      http:
        paths:
          - path: /gen
            pathType: Prefix
            backend:
              service:
                name: gen-ai-svc
                port:
                  name: https
          - path: /rec
            pathType: Prefix
            backend:
              service:
                name: rec-ai-svc
                port:
                  name: https
          - path: /ready
            pathType: Prefix
            backend:
              service:
                name: rec-ai-svc
                port:
                  name: https
          - path: /docs
            pathType: Prefix
            backend:
              service:
                name: rec-ai-svc
                port:
                  name: https
